--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "run-sequence": "1.1.5"
   },
   "name": "polr-mobile",
-  "description": "polr-mobile: An Ionic project",
+  "description": "A mobile Polr client app built with Ionic.",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
