--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,30 @@ android:
     components:
         - build-tools-23.0.1
         - android-23
+        - platform-tools
+        - tools
+        - extra-google-google_play_services
+        - extra-google-m2repository
+        - extra-android-m2repository
+        - addon-google_apis-google-19
+        - addon-google_apis-google-23
+
 before_install:
   - nvm install v4
   - npm i -g npm@^2.0.0
   - npm install -g ionic@beta
   - npm install -g cordova
+  - npm install -g gulp
+  - sudo add-apt-repository ppa:fkrull/deadsnakes
+  - sudo apt-get -qq update
+  - sudo apt-get install -y python2.7
 install:
   - npm install
 before_script:
   - npm prune
+  - python setCordovaVersion.py 1.3.%BUILD_NUMBER% %BUILD_NUMBER% config.xml
+script:
+  - gulp
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
