--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,11 @@ before_install:
   - npm install -g ionic@beta
   - npm install -g cordova
   - npm install -g gulp
-  - sudo add-apt-repository ppa:fkrull/deadsnakes -y
-  - sudo apt-get -qq update
-  - sudo apt-get install -y python2.7
 install:
   - npm install
 before_script:
   - npm prune
-  - python setCordovaVersion.py 0.1.$TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_NUMBER config.xml
+  #- python setCordovaVersion.py 0.1.$TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_NUMBER config.xml
 script:
   - gulp
 branches:
