--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "polr-mobile",
-  "version": "1.1.1",
-  "description": "polr-mobile: An Ionic project",
+  "version": "0.1.0",
+  "description": "A mobile Polr client app built with Ionic.",
+  "license": "MIT",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
