--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ before_script:
   - npm prune
   - python setcordovaversion.py 0.1.$TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_NUMBER config.xml
 script:
-  - gulp
+  - ionic platforms add android
+  - ionic build android
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
