--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "event-stream": "^3.3.4",
+    "fs": "0.0.1-security",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "taco-team-build": "^0.2.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
