--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
   before_script:
     - npm install
     - npm prune
-    - python setcordovaversion.py 0.1.$CI_BUILD_ID $CI_BUILD_ID config.xml
+    #- python setcordovaversion.py 0.1.$CI_BUILD_ID $CI_BUILD_ID config.xml
   script:
     - node node_modules/gulp/gulp.js
   artifacts:
