--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "eslint": "^3.5.0",
     "event-stream": "^3.3.4",
     "fs": "0.0.1-security",
     "gulp-util": "^2.2.14",
