--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,8 +5,8 @@ engines:
     enabled: true
     config:
       languages:
-        - javascript
-          - mass_threshold: 20
+        javascript:
+          mass_threshold: 60
   eslint:
     enabled: true
   fixme:
