--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "^3.5.0",
     "event-stream": "^3.3.4",
     "fs": "0.0.1-security",
+    "gulp-csslint": "^1.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
     "taco-team-build": "^0.2.2"
