--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: filiosoft/ionic:python
 variables:
   S3_BUCKET_NAME: "polr-mobile.filiosoft.net"
+  BUILD_NUMBER: "0.1.$CI_BUILD_ID"
 cache:
   paths:
   - node_modules/
@@ -12,12 +13,15 @@ dev-build-android:
   before_script:
     - npm install
     - npm prune
-    - python setcordovaversion.py 0.1.$CI_BUILD_ID $CI_BUILD_ID config.xml
+    - python setcordovaversion.py $BUILD_NUMBER $CI_BUILD_ID config.xml
   script:
     - node node_modules/gulp/bin/gulp.js
+  after_script:
+    - mkdir apk
+    - mv bin/Android/Release/android-release.apk Polr-Mobile-Dev-$BUILD_NUMBER.apk
   artifacts:
     paths:
-    - bin/Android/Release/android-release.apk
+    - Polr-Mobile-Dev-$BUILD_NUMBER.apk
   except:
     - tags
 
@@ -31,9 +35,12 @@ release-build-android:
     - python setcordovaversion.py $CI_BUILD_TAG $CI_BUILD_ID config.xml
   script:
     - node node_modules/gulp/bin/gulp.js
+  after_script:
+    - mkdir apk
+    - mv bin/Android/Release/android-release.apk Polr-Mobile-Release-$CI_BUILD_TAG.apk
   artifacts:
     paths:
-    - bin/Android/Release/android-release.apk
+    - Polr-Mobile-Release-$CI_BUILD_TAG.apk
   only:
     - tags
 
@@ -46,8 +53,6 @@ lint:
     - npm prune
   script:
     - node node_modules/gulp/bin/gulp.js test
-  except:
-    - tags
 
 deploy:
   image: python:latest
