--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: filiosoft/ionic:python
 variables:
   S3_BUCKET_NAME: "polr-mobile.filiosoft.net"
-  BUILD_NUMBER: "0.1.$CI_BUILD_ID"
+  VERSION_NUMBER: "0.1.$CI_BUILD_ID"
 cache:
   paths:
   - node_modules/
@@ -13,15 +13,15 @@ dev-build-android:
   before_script:
     - npm install
     - npm prune
-    - python setcordovaversion.py $BUILD_NUMBER $CI_BUILD_ID config.xml
+    - python setcordovaversion.py $VERSION_NUMBER $CI_BUILD_ID config.xml
   script:
     - node node_modules/gulp/bin/gulp.js
   after_script:
     - mkdir apk
-    - mv bin/Android/Release/android-release.apk Polr-Mobile-Dev-$BUILD_NUMBER.apk
+    - mv bin/Android/Release/android-release.apk Polr-Mobile-Dev-$VERSION_NUMBER.apk
   artifacts:
     paths:
-    - Polr-Mobile-Dev-$BUILD_NUMBER.apk
+    - Polr-Mobile-Dev-$VERSION_NUMBER.apk
   except:
     - tags
 
@@ -55,12 +55,11 @@ lint:
     - node node_modules/gulp/bin/gulp.js test
 
 deploy:
-  image: python:latest
+  image: garland/aws-cli-docker:latest
   stage: deploy
   tags: 
     - docker
   script:
-  - pip install awscli
   - aws s3 cp ./ s3://$S3_BUCKET_NAME/ --recursive --exclude ".gitlab-ci.yml" --include "*"
   only:
   - gh-pages
