--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
     - node_modules
 android:
     components:
-        - build-tools-23.0.1
+        - build-tools-25.0.1
         - android-23
         - platform-tools
         - tools
@@ -20,16 +20,17 @@ android:
         - addon-google_apis-google-23
 
 before_install:
-  - nvm install v4
+  - nvm install v6
   - npm i -g npm@^2.0.0
-  - npm install -g ionic@beta
+  - npm install -g ionic
   - npm install -g cordova
   - npm install -g gulp
+  - npm install -g scv-cli
 install:
   - npm install
 before_script:
   - npm prune
-  - python setcordovaversion.py 0.1.$TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_NUMBER config.xml
+  - scv -n 0.1.0 -b $TRAVIS_BUILD_NUMBER
 script:
   - gulp
 branches:
