--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,15 @@ android:
 
 before_install:
   - nvm install v6
-  - npm i -g npm@^2.0.0
-  - npm install -g ionic
-  - npm install -g cordova
-  - npm install -g gulp
-  - npm install -g scv-cli
+  - npm i -qq -g npm@^2.0.0
+  - npm i -qq -g ionic
+  - npm i -qq -g cordova
+  - npm i -qq -g gulp
+  - npm i -qq scv-cli
 install:
-  - npm install
+  - npm i -qq
 before_script:
-  - npm prune
-  - scv -n 0.1.0 -b $TRAVIS_BUILD_NUMBER
+  - node node_modules/scv-cli/scv.js -n 0.1.0 -b $TRAVIS_BUILD_NUMBER
 script:
   - gulp
 branches:
