--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ android:
 
 before_install:
   - nvm install v6
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
 install:
   - yarn install
 before_script:
