--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "scv-cli": "^1.0.1",
+    "colors": "^1.1.2",
     "cordova-plugin-console": "~1.0.3",
     "cordova-plugin-device": "~1.1.2",
     "cordova-plugin-splashscreen": "~3.2.2",
     "cordova-plugin-statusbar": "~2.1.3",
     "cordova-plugin-whitelist": "~1.2.2",
-    "ionic-plugin-keyboard": "~2.2.1"
+    "gulp": "^3.5.6",
+    "gulp-concat": "^2.2.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "run-sequence": "^1.2.2",
+    "scv-cli": "^1.0.1",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -37,7 +40,7 @@
     "gulp-csslint": "^1.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
+    "shelljs": "^0.7.8",
     "taco-team-build": "^0.2.2"
   },
   "cordovaPlugins": [
