--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "cordova-plugin-console": "~1.0.3",
+    "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "~1.1.2",
     "cordova-plugin-splashscreen": "~3.2.2",
     "cordova-plugin-statusbar": "~2.1.3",
@@ -56,7 +57,8 @@
     "cordova-plugin-splashscreen@~3.2.2",
     "cordova-plugin-statusbar@~2.1.3",
     "cordova-plugin-whitelist@~1.2.2",
-    "ionic-plugin-keyboard@~2.2.1"
+    "ionic-plugin-keyboard@~2.2.1",
+    "cordova-plugin-crosswalk-webview"
   ],
   "cordovaPlatforms": [],
   "cordova": {
@@ -66,7 +68,14 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-crosswalk-webview": {
+        "XWALK_VERSION": "23+",
+        "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
+        "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
+        "XWALK_MODE": "embedded",
+        "XWALK_MULTIPLEAPK": "true"
+      }
     }
   }
 }
