--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,9 @@ android:
 before_install:
   - nvm install v6
   - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - source ~/.bashrc
 install:
+  - source ~/.bashrc
+  - export PATH="$HOME/.yarn/bin:$PATH"
   - yarn install
 before_script:
   - node node_modules/scv-cli/scv.js -n 0.1.0 -b $TRAVIS_BUILD_NUMBER
