--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ jdk:
   - oraclejdk8
 android:
     components:
-        - build-tools-25.0.1
-        - android-23
+        - build-tools-26.0.0
+        - android-25
         - platform-tools
         - tools
         - extra-google-google_play_services
@@ -19,6 +19,7 @@ android:
         - extra-android-m2repository
         - addon-google_apis-google-19
         - addon-google_apis-google-23
+        - addon-google_apis-google-24
 
 before_install:
   - nvm install v6
