--- a/package.json
+++ b/package.json
@@ -2,13 +2,32 @@
   "name": "polr-mobile",
   "version": "0.1.0",
   "description": "A mobile Polr client app built with Ionic.",
+  "author": {
+    "email": "team@filiosoft.com",
+    "name": "Filiosoft Open Source Team",
+    "url": "https://filiosoft.net"
+  },
+  "contributors": [
+    {
+      "email": "nprail@filiosoft.com",
+      "name": "Noah Prail",
+      "url": "https://nprail.me"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "scv-cli": "^1.0.1",
+    "cordova-plugin-console": "~1.0.3",
+    "cordova-plugin-device": "~1.1.2",
+    "cordova-plugin-splashscreen": "~3.2.2",
+    "cordova-plugin-statusbar": "~2.1.3",
+    "cordova-plugin-whitelist": "~1.2.2",
+    "ionic-plugin-keyboard": "~2.2.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -27,7 +46,24 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-vs-taco-support",
+    "cordova-plugin-console@~1.0.3",
+    "cordova-plugin-device@~1.1.2",
+    "cordova-plugin-splashscreen@~3.2.2",
+    "cordova-plugin-statusbar@~2.1.3",
+    "cordova-plugin-whitelist@~1.2.2",
+    "ionic-plugin-keyboard@~2.2.1"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {}
+    }
+  }
 }
