--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,6 @@ mirror:
   tags:
     - docker
   script:
-   - git clone --bare https://nprail:$GITLAB_ACCESS_KEY@gitlab.filiosoft.com/oss/polr-mobile.git
+   - git clone --bare https://nprail:$GITLAB_ACCESS_KEY@developers.filiosoft.com/oss/polr-mobile.git
    - cd polr-mobile.git
    - git push --mirror https://nprail:$GITHUB_ACCESS_KEY@github.com/Filiosoft/polr-mobile.git
